--- a/frontend/src/app/modules/client/pages/theaters/theaters.component.html
+++ b/frontend/src/app/modules/client/pages/theaters/theaters.component.html
@@ -1,6 +1,7 @@
 <div class="flex flex-wrap justify-content-center">
     <div class="mr-4" *ngFor="let cinema of cinemas; index as i">
-        <app-option-card [name]="cinema.name" url="/client/billboard" [imagePath]="API_URL + cinema.imagePath">
+        <app-option-card [name]="cinema.name" [url]="'/client/billboard/' + cinema._id"
+            [imagePath]="API_URL + cinema.imagePath">
         </app-option-card>
     </div>
 </div>
