--- a/frontend/src/app/modules/client/pages/billboard/movie-card/movie-card.component.html
+++ b/frontend/src/app/modules/client/pages/billboard/movie-card/movie-card.component.html
@@ -6,8 +6,19 @@
         </ng-template>
         <ng-template pTemplate="subtitle">
             <div class=" justify-content-center text-color">
-                <h1 class="mb-1">{{movie.title}}</h1>
-                <h2 class="mt-0 mb-3">Horarios: 18:00-20:10</h2>
+                <h1 class="mt-0 mb-3">{{movie.title}}</h1>
+                <ng-container *ngIf="functions?.length">
+                    <h2 class="mt-0 mb-2">Horarios: </h2>
+                    <div class="flex flex-wrap justify-content-start">
+                        <h4 *ngFor="let function of movie.functions" class="mt-0 mb-1 mr-2">{{function.from |
+                            date:'H:mm'}}
+                        </h4>
+                    </div>
+                </ng-container>
+                <ng-container *ngIf="!functions?.length">
+                    <h2 class="mt-0 mb-1">Próximamente
+                    </h2>
+                </ng-container>
             </div>
         </ng-template>
     </p-card>
