gui de sala para seleccion de butacas creada con funcionamiento cc

--- a/frontend/src/app/modules/client/pages/billboard/billboard.component.html
+++ b/frontend/src/app/modules/client/pages/billboard/billboard.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-wrap justify-content-center">
-    <div class="mr-2 my-2" *ngFor="let movie of movies; index as i">
+    <div class="lg:mx-4 md:mx-2 my-2" *ngFor="let movie of movies; index as i">
         <app-movie-card [movie]="movie" (selectMovie)="selectMovie($event)"></app-movie-card>
     </div>
 </div>
