--- a/frontend/src/app/modules/client/pages/billboard/movie-card/movie-card.component.html
+++ b/frontend/src/app/modules/client/pages/billboard/movie-card/movie-card.component.html
@@ -11,7 +11,7 @@
                     <h2 class="mt-0 mb-2">Horarios: </h2>
                     <div class="flex flex-wrap justify-content-start">
                         <h4 *ngFor="let function of movie.functions" class="mt-0 mb-1 mr-2">{{function.from |
-                            date:'H:mm'}}
+                            date:'HH:mm'}}
                         </h4>
                     </div>
                 </ng-container>
