--- a/frontend/src/app/modules/client/pages/movie/movie.component.html
+++ b/frontend/src/app/modules/client/pages/movie/movie.component.html
@@ -14,7 +14,7 @@
                     <div class="flex flex-wrap" style="max-width: 350px">
                         <div class="h-3rem w-4rem border-round flex align-items-center justify-content-center bg-red-600 hover:bg-red-800 border-1 border-white text-white m-2 font-bold transition-colors transition-duration-200 cursor-pointer"
                             *ngFor="let function of functions" (click)="handleClick(function)">
-                            {{function.from | date:'H:mm'}}
+                            {{function.from | date:'HH:mm'}}
                         </div>
                     </div>
                 </ng-container>
