--- a/frontend/src/app/shared/components/option-list/option-list.component.html
+++ b/frontend/src/app/shared/components/option-list/option-list.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-wrap justify-content-center">
-    <div class="mr-4" *ngFor="let option of options; index as i">
+    <div class="lg:mx-4 md:mx-2" *ngFor="let option of options; index as i">
         <app-option-card [name]="option.name" [url]="option.url" [imagePath]="option.imagePath"></app-option-card>
     </div>
 </div>
