--- a/frontend/src/app/modules/admin/pages/functions/components/function-form/function-form.component.html
+++ b/frontend/src/app/modules/admin/pages/functions/components/function-form/function-form.component.html
@@ -21,17 +21,18 @@
             <div class="field">
                 <h4>Horario</h4>
                 <div class="p-inputgroup">
-                    <p-calendar [timeOnly]="true" placeholder="Inicio" name="from" formControlName="from" appendTo="body"
-                        [readonlyInput]="true" (onSelect)="onSelectFrom($event)">
+                    <p-calendar [timeOnly]="true" placeholder="Inicio" name="from" formControlName="from"
+                        appendTo="body" [readonlyInput]="true" (onSelect)="onSelectFrom($event)">
                     </p-calendar>
                     <p-calendar [timeOnly]="true" placeholder="Fin" formControlName="to" appendTo="body"
                         [readonlyInput]="true"></p-calendar>
                 </div>
                 <div *ngIf="functionForm.invalid" class="mt-2 ml-1">
-                    <small *ngIf="functionForm.hasError('checkTimeRangeIsAvailable')" class="text-red-500">Horario no disponible</small>
+                    <small *ngIf="functionForm.hasError('checkTimeRangeIsAvailable')" class="text-red-500">Horario no
+                        disponible</small>
                 </div>
             </div>
-            
+
         </form>
     </ng-template>
     <ng-template pTemplate="footer">
@@ -40,7 +41,7 @@
         </div>
         <div *ngIf="!editMode">
             <p-button label="Cancelar" (onClick)="closeDialog()" styleClass="p-button-danger"></p-button>
-            <p-button label="Guardar" (onClick)="devSubmit()" styleClass="p-button-primary"></p-button>
+            <p-button label="Guardar" (onClick)="handleSubmit()" styleClass="p-button-primary"></p-button>
         </div>
     </ng-template>
 </p-dialog>
