--- a/frontend/src/app/modules/auth/pages/login/login.component.html
+++ b/frontend/src/app/modules/auth/pages/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="w-full mt-8">
     <div class="h-full flex justify-content-center align-items-center">
-        <p-card styleClass="p-fluid bg-gray-500" [style]="{'width': '25rem'}">
+        <p-card styleClass="p-fluid" [style]="{'width': '25rem'}">
             <ng-template pTemplate="header">
-                <div class="flex justify-content-center pt-4"><img src="/assets/images/auth/user.png"
-                        [style]="{'width': '8rem', 'height': '8rem'}"></div>
+                <div class="flex justify-content-center pt-4">
+                    <p-image src="/assets/images/core/Movie_Corp_positivo_completo.png" height="120"></p-image></div>
             </ng-template>
             <ng-template pTemplate="content">
                 <form [formGroup]="loginForm" (keydown.enter)="handleSubmit()">
