gui de ingreso de datos cc

--- a/frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/frontend/src/app/shared/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <p-menubar styleClass="bg-red-600 py-1 mb-4" [model]="items">
     <ng-template pTemplate="start">
-        <!-- <h2 class="text-white my-0 mx-4">MovieCorp</h2> -->
-        <p-image src="/assets/images/core/Movie_Corp_positivo.png" height="40" class="mx-4 my-0"></p-image>
+        <h2 class="text-white my-0 mx-4">Ice Norte</h2>
+        <!-- <p-image src="/assets/images/core/Movie_Corp_positivo.png" height="40" class="mx-4 my-0"></p-image> -->
     </ng-template>
     <ng-template pTemplate="end">
         <ng-container *ngIf="isLoggedIn">
