validaciones de rangos en admin cc

--- a/frontend/src/app/modules/admin/pages/movies/components/movie-form/movie-form.component.html
+++ b/frontend/src/app/modules/admin/pages/movies/components/movie-form/movie-form.component.html
@@ -20,7 +20,7 @@
             </div>
             <div class="field">
                 <h4>Duracion</h4>
-                <p-inputNumber formControlName="length" [useGrouping]="false" suffix=" mins"></p-inputNumber>
+                <p-inputNumber formControlName="length" [useGrouping]="false" suffix=" mins" [min]="60"></p-inputNumber>
             </div>
             <div class="field">
                 <h4>Protagonistas</h4>
