Tickets nombre de variables corregido VC

--- a/backend/src/templates/voucher.html
+++ b/backend/src/templates/voucher.html
@@ -23,7 +23,7 @@
             <hr>
             <div class="row">
                 <div class="col-xs-10">
-                    <h1 class="h6">Nombre: {{name}} {{lastname}}</h1>
+                    <h1 class="h6">Nombre: {{names}}</h1>
                     <h1 class="h6">CI: {{ci}}</h1>
                 </div>
                 <div class="col-xs-2 text-center">
