tamaño maximo de archivo

--- a/frontend/src/app/modules/admin/pages/cinemas/components/cinema-form/cinema-form.component.html
+++ b/frontend/src/app/modules/admin/pages/cinemas/components/cinema-form/cinema-form.component.html
@@ -18,7 +18,7 @@
                 <input type="text" pInputText formControlName="address">
             </div>
             <div class="field">
-                <h4>Imagen</h4>
+                <h4>Imagen  (Tamaño máximo 5Mb)</h4>
                 <ng-container *ngIf="editMode">
                     <p-button [label]="!uploadImage? 'Actualizar imagen': 'Cancelar'" (onClick)="toggleImg()">
                     </p-button>
