--- a/frontend/src/app/modules/admin/pages/movies/components/movie-form/movie-form.component.html
+++ b/frontend/src/app/modules/admin/pages/movies/components/movie-form/movie-form.component.html
@@ -31,7 +31,7 @@
                 <input type="text" pInputText formControlName="director">
             </div>
             <div class="field">
-                <h4>Portada</h4>
+                <h4>Portada (Tamaño máximo 5Mb)</h4>
                 <ng-container *ngIf="editMode">
                     <p-button [label]="!uploadImage? 'Actualizar portada': 'Cancelar'" (onClick)="toggleImg()">
                     </p-button>
