--- a/frontend/src/app/modules/client/pages/room-function/components/seats-matrix/seats-matrix.component.html
+++ b/frontend/src/app/modules/client/pages/room-function/components/seats-matrix/seats-matrix.component.html
@@ -1,4 +1,4 @@
-<div class="mt-4">
+<div class="mt-4 overflow-x-scroll">
     <ng-container *ngFor="let col of colArr">
         <div class="flex justify-content-around">
             <ng-container *ngFor="let row of rowArr">
