--- a/frontend/src/app/modules/admin/pages/movies/components/movie-form/movie-form.component.html
+++ b/frontend/src/app/modules/admin/pages/movies/components/movie-form/movie-form.component.html
@@ -52,6 +52,9 @@
             <div class="field">
                 <h4>Trailer</h4>
                 <input type="url" pInputText formControlName="trailer">
+                <div class="mt-2 ml-1">
+                <small>Ingresar al video del trailer en YouTube, click en "Compartir" copiar y pegar link</small>
+            </div>
             </div>
         </form>
     </ng-template>
