--- a/frontend/src/app/modules/auth/pages/login/login.component.html
+++ b/frontend/src/app/modules/auth/pages/login/login.component.html
@@ -3,7 +3,8 @@
         <p-card styleClass="p-fluid" [style]="{'width': '25rem'}">
             <ng-template pTemplate="header">
                 <div class="flex justify-content-center pt-4">
-                    <p-image src="/assets/images/core/Movie_Corp_positivo_completo.png" height="120"></p-image></div>
+                    <p-image src="/assets/images/auth/user.png" height="120"></p-image></div>
+                    <!-- <p-image src="/assets/images/core/Movie_Corp_positivo_completo.png" height="120"></p-image></div> -->
             </ng-template>
             <ng-template pTemplate="content">
                 <form [formGroup]="loginForm" (keydown.enter)="handleSubmit()">
